# decision-intelligence-assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: analyze.py
backend/app/schemas/: analysis.py
backend/app/services/: __init__.py  analysis.py  features.py  llm.py  ml.py  query_logger.py  retrieval.py
backend/scripts/: train_priority_model.py
data/sample/: customer_support_sample.csv
docs/: work_log.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
notebooks/: README.md  decision_intelligence_assistant.ipynb
