[project]
name = "decision-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for the Decision Intelligence Assistant."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.uv]
package = false

