[project]
name = "decision-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for the Decision Intelligence Assistant."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.115.0,<1.0.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
]

